<resources>
    <string name="app_name">HumbJorch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_label">Email</string>
    <string name="pass_label">Password</string>
    <string name="sing_in">Sing In</string>
    <string name="log_in">Log In</string>
    <string name="or_sign_up_with">Or sign up with Google</string>


    <string name="label_photo">- Photo -</string>
    <string name="label_user_name">User name</string>
    <string name="label_register">Register</string>
    <string name="label_fingerprint_login">login with Touch ID</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="todo">TODO</string>
    <string name="label_login_with_touch_id">Login with Touch ID</string>
    <string name="label_login_with_email_password">Login with Password</string>
    <string name="tv_login_touch_id_description">Use your Touch ID for faster, easier access \nto your account</string>
    <string name="tv_login_touch_id_description_email">Use your Password for faster, easier access \nto your account</string>
    <string name="label_use_touch_id">Use Touch ID</string>
    <string name="label_login_with_email"><u>Login with Email</u></string>
    <string name="error_name">invalid name</string>
    <string name="error_email">invalid email</string>
    <string name="default_web_client_id">1096028603631-uvsj03mn7v1uc8si078h8u0fag6v94gs.apps.googleusercontent.com</string>
    <string name="label_success">Success</string>
    <string name="label_error">Error</string>
    <string name="label_information">Information</string>
    <string name="label_warning">Warning</string>
    <string name="welcome_message">Welcome! Your security is our priority. Enjoy your session!</string>
    <string name="share_preferences_email">AUTHENTICATION_PREFERENCES_EMAIL</string>
    <string name="share_preferences_photo_url">AUTHENTICATION_PREFERENCES_PHOTO_URL</string>
    <string name="share_preferences_session">SHARE_PREFERENCES_SESSION</string>
    <string name="share_preferences_touch_id_session">AUTHENTICATION_PREFERENCES_TOUCH_ID_SESSION</string>
    <string name="share_preferences_google_session">AUTHENTICATION_PREFERENCES_GOOGLE_SESSION</string>
    <string name="label_login_with_google">Login with Google</string>
    <string name="tv_google_description">Welcome! Sign in with Google for a personalized and secure experience on our mobile app.</string>
    <string name="label_google_session">Continue</string>
    <string name="label_show_all_post">Show All Post</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_show_all">Show All</string>
    <string name="touch_success">Success: Fingerprint verified. Access granted.</string>
    <string name="touch_error">Error: Fingerprint not recognized. Access denied.</string>
    <string name="dialog_confirm">Accept</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="not_conection">You don\'t have access to a stable network</string>
    <string name="dialog_error">Warning!!</string>
    <string name="label_error_red">Initialization Error</string>
    <string name="tv_error_description">App failed to start. Please check your connection and try again. If issue persists, reinstall the application.</string>
    <string name="label_finish_session">Finish</string>
    <string name="custom_dialog_title">Confirm Exit</string>
    <string name="custom_dialog_body">Are you sure you want to exit? Unsaved data will be lost. Confirm to exit.</string>
    <string name="label_share">share</string>
    <string name="updateSuccess">Update successful! Your data is now current.</string>
    <string name="custom_sign_off">Sign off</string>
    <string name="custom_dialog_session">Are you sure? Logging out will end your session. Confirm to proceed.</string>
    <string name="message_exit">Logout successful! See you next time.</string>
    <string name="error_sing_out">Error during logout. Please try again later or contact support for assistance.</string>

    <string name="alert_geolocation_title">Geolocation Alert</string>
    <string name="alert_geolocation_description">To use the application you must have GPS activated.</string>
    <string name="alert_geolocation_positive_button">To proceed, please activate the GPS. Thank you.</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="label_permission_success">Permission granted successfully. Feel free to proceed. Thank you</string>
    <string name="share_preferences_latitude">SHARE_PREFERENCES_LATITUDE</string>
    <string name="share_preferences_longitude">SHARE_PREFERENCES_LONGITUDE</string>


</resources>