<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.register.RegisterFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/dp120"
        android:layout_height="@dimen/dp120"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/foreground_grey"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_camera" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_label_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/label_photo"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_photo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_user_name"
        style="@style/MyLayoutInputTextOutline"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        app:helperText="@string/label_user_name"
        app:layout_constraintBottom_toTopOf="@+id/ti_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_photo">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorGray1"
            android:textSize="@dimen/sp16"
            app:fontFamily="@font/roboto_medium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/MyLayoutInputTextOutline"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        app:helperText="@string/label_email"
        app:layout_constraintBottom_toTopOf="@+id/ti_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorGray1"
            android:textSize="@dimen/sp16"
            app:fontFamily="@font/roboto_medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        style="@style/MyLayoutInputTextOutline"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        app:helperText="@string/pass_label"
        app:layout_constraintBottom_toTopOf="@+id/sw_fingerprint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/colorGray1"
            android:textSize="@dimen/sp16"
            app:fontFamily="@font/roboto_medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_fingerprint_login"
        app:layout_constraintBottom_toBottomOf="@id/sw_fingerprint"
        app:layout_constraintEnd_toStartOf="@id/sw_fingerprint"
        app:layout_constraintTop_toTopOf="@+id/sw_fingerprint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/label_register"
        android:enabled="false"
        app:backgroundTint="@color/blue"
        app:cornerRadius="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_fingerprint" />

</androidx.constraintlayout.widget.ConstraintLayout>