<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.navigationlogin.loginPassword.LoginPasswordFragment"
        android:padding="@dimen/dp16">

        <ImageView
            android:id="@+id/btn_exit"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_exit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/dp120"
            android:layout_height="@dimen/dp120"
            android:src="@drawable/ic_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_image"
            android:layout_width="156dp"
            android:layout_height="147dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="8dp"
            android:foreground="@drawable/foreground_grey"
            android:clickable="true"
            android:layout_marginTop="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_logo"
            android:focusable="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPhotoProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_add_photo"
                app:tint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_logo" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            style="@style/MyLayoutInputTextOutline"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp35"
            app:helperText="@string/pass_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/colorGray1"
                android:gravity="center"
                android:textSize="@dimen/sp16"
                app:fontFamily="@font/roboto_medium" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="@+id/tilPass"
            app:layout_constraintTop_toBottomOf="@+id/tilPass" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fingerprint_login"
            app:layout_constraintBottom_toBottomOf="@id/sw_fingerprint"
            app:layout_constraintEnd_toStartOf="@id/sw_fingerprint"
            app:layout_constraintTop_toTopOf="@+id/sw_fingerprint" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Button.General"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_in"
            android:paddingHorizontal="@dimen/dp24"
            android:layout_marginTop="@dimen/dp24"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/sw_fingerprint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>