<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@drawable/ic_back"
        tools:context=".ui.login.navigationlogin.googleSession.GoogleSessionFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_image"
            android:layout_width="156dp"
            android:layout_height="147dp"
            android:layout_marginTop="@dimen/dp80"
            app:cardCornerRadius="100dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPhotoProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_add_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:layout_marginBottom="@dimen/dp24"
            app:cardCornerRadius="@dimen/dp8"
            app:cardElevation="4dp"
            app:cardBackgroundColor="#EDFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_login_touch_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_login_with_google"
                    android:textSize="20sp"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/dp24"/>

                <TextView
                    android:id="@+id/tv_login_touch_id_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp24"
                    android:text="@string/tv_google_description"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginStart="@dimen/dp24"
                    android:layout_marginEnd="@dimen/dp24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login_touch_id" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_goggle_session"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp50"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:foreground="@drawable/foreground_grey"
                    android:clickable="true"
                    android:layout_marginBottom="@dimen/dp80"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login_touch_id_description"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start|center"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <ImageView
                            android:layout_width="38dp"
                            android:layout_height="38dp"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/google" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            android:textColor="@color/blue"
                            android:text="@string/label_google_session"
                            android:textAlignment="center" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>